--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             <span id='loadcodecontainer' class='hidden'><br>Chart code: <textarea id='loadcode' style='vertical-align: top;'></textarea><input type='button' value='Load' id='load'></span>
           </div>
           <div id='loadmessage' class='hidden' style='color: red;'></div>
-          <div class="dropdown">
+     <!--     <div class="dropdown">
             <a href="javascript:void(0)" class="dropbtn" onclick="myFunction()">Dropdown</a>
             <div class="dropdown-content" id="myDropdown">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
               <a href="#">Link 3</a>
             </div>
-          </div>
+          </div>-->
           <div class='load-dropdown' id='load'>
             <a href="javascript:void(0)" class="loaddropbtn" onclick="toggleLoadDropdown()">Load Chart</a>
             <div class="load-dropdown-content" id="loadDropdown">
@@ -182,7 +182,7 @@
             .show {display:block;}
             </style>
 
-            <ul class='item'>
+           <!-- <ul class='item'>
               <div class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn" onclick="myFunction()">Dropdown</a>
                 <div class="dropdown-content" id="myDropdown">
@@ -191,7 +191,7 @@
                   <a href="#">Link 3</a>
                 </div>
               </div>
-            </ul>
+            </ul>-->
 
             <script>
             /* When the user clicks on the button, 
