--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         
         <div style="float:right" class='align-right-container'>
-          <a href='javascript:window.print()'>print</a>
+          <a href='javascript:window.print()'><img src="print-icon.png" alt="prt icon" style="width:24px;height:24px;">print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </div>
 <!--      </div>
