--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         
         <div style="float:right" class='align-right-container'>
-          <a id='print-icon'><img src="print-icon.png" alt="prt icon" style="width: 24px;top: 6px;height: 24px;position: relative;"><a>
+          <a id='print-icon'><img src="print-icon.png" alt="prt icon" style="width: 24px;top: 6px;height: 24px;position: relative;"></a>
           <a href='javascript:window.print()'>print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </div>
