--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
         <div style="float:right" class='align-right-container'>
           <a id='print-icon'><img src="print-icon.png" alt="prt icon" style="width: 24px;top: 8px;height: 24px;position: relative;"></a>
-          <a href='javascript:window.print()'>&#128438; print</a>
+          <a href='javascript:window.print()'>&#x1f5b6; print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </div>
 <!--      </div>
