--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </div>
         
         <div style="float:right" class='align-right-container'>
-          <div id='print-button' href='javascript:window.print()'>
-            <a id='print-icon'><img src="print-icon.png" alt="prt icon" style="width: 24px;top: 8px;height: 24px;position: relative;"></a>
-            <a id='print-text'>print</a>
+          <div id='print-button'>
+            <a href='javascript:window.print()' id='print-icon'><img src="print-icon.png" alt="prt icon" style="width: 24px;top: 8px;height: 24px;position: relative;"></a>
+            <a href='javascript:window.print()' id='print-text'>print</a>
           </div>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </div>
