--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <input type='checkbox' id='chkstands' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkstands'>Show music stands</label><span id='helpstands' class='help'><br>Click the chart to toggle stands</span></div>
             <input type='checkbox' id='chkpodium' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkpodium'>Show podium</label><span id='helppodium' class='help'><br>Click the chart to toggle podium</span></div>
-            <p>Seat size: <input type='button' id='btnscaledown' value='-'> <input type='button' id='btnscaleup' value='+'> <span id='scale'>100</span>%</p>
+            <p>Seat size: <input type='button' id='btnscaledown' value='–'> <input type='button' id='btnscaleup' value='+'> <span id='scale'>100</span>%</p>
           </div>
           <p>Chart title: <input id='title'></p>
           <p><input type='button' value='Generate' id='generate'><input type='button' value='Reset' id='reset'></p>
