--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <input type='checkbox' id='chkletters' style='float: left' disabled='disabled'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkletters' class='disabled' id='lblletters'>Give each row a letter</label></div>
             </div>
             <input type='checkbox' id='chkstands' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkstands'>Show music stands</label><span id='helpstands' class='help'><br>Click the chart to toggle stands</span></div>
-            <input type='checkbox' id='chkpodium' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkpodium'>Show podium</label><span id='helppodium' class='help'><br>Click the chart to toggle podium</span></div>
+            <input type='checkbox' id='chkpodium' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkpodium'>Show podium</label></div>
             <p>Seat size: <input type='button' id='btnscaledown' value='–'> <input type='button' id='btnscaleup' value='+'> <span id='scale'>100</span>%</p>
           </div>
           <p>Chart title: <input id='title'></p>
