--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         <div class='row-container'>
           <h2>number of chairs per row:</h2>
           <div id='rows'>
-            <p>Row 1: <input id='row1' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(1)' tabindex='2'> Edit labels</a></p>
-            <p>Row 2: <input id='row2' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(2)' tabindex='2'> Edit labels</a></p>
-            <p>Row 3: <input id='row3' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(3)' tabindex='2'> Edit labels</a></p>
-            <p>Row 4: <input id='row4' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(4)' tabindex='2'> Edit labels</a></p>
-            <p>Row 5: <input id='row5' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(5)' tabindex='2'> Edit labels</a></p>
-            <p>Row 6: <input id='row6' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(6)' tabindex='2'> Edit labels</a></p>
-            <p>Row 7: <input id='row7' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(7)' tabindex='2'> Edit labels</a></p>
+            <p>Row 1: &#9;<input id='row1' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(1)' tabindex='2'> Edit labels</a></p>
+            <p>Row 2: &#9;<input id='row2' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(2)' tabindex='2'> Edit labels</a></p>
+            <p>Row 3: &#9;<input id='row3' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(3)' tabindex='2'> Edit labels</a></p>
+            <p>Row 4: &#9;<input id='row4' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(4)' tabindex='2'> Edit labels</a></p>
+            <p>Row 5: &#9;<input id='row5' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(5)' tabindex='2'> Edit labels</a></p>
+            <p>Row 6: &#9;<input id='row6' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(6)' tabindex='2'> Edit labels</a></p>
+            <p>Row 7: &#9;<input id='row7' size='2' maxlength='2' tabindex='1'> <a class='editlabellink' href='javascript:editLabels(7)' tabindex='2'> Edit labels</a></p>
           </div>
           <p><a href='javascript:addRow()'>Add Row</a></p>
         </div>
