--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
           <div id='chart-options'>
             <p>Straight rows: <input type='button' id='btnstraightdown'value='–'> <input type='button' id='btnstraightup' value='+'> <span id='straight'>0</span></p>
             <label class="switch">
-              <input type='checkbox' id='chknumbers' checked='checked' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chknumbers'>Show numbers on seats</label></div>
+              <input type='checkbox' id='chknumbers' checked='checked' style='float: left'>
               <div class="slider round"></div>
+              <div style='margin-left: 25px; margin-bottom: 7px;'><label for='chknumbers'>Show numbers on seats</label></div>
             </label>
             <input type='checkbox' id='chkrestart' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkrestart' id='lblrestart'>Restart numbers on each row</label></div>
             <div title="Only available if 'Restart numbers on each row' is selected">
