--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <input type='checkbox' id='chknumbers' checked='checked' style='float: left'>
               <div class="slider round"></div>
             </label>
-            <div style='margin-left: 25px; margin-bottom: 7px;'><label for='chknumbers'>Show numbers on seats</label></div>
+            <div id='chknumberslabel' style='margin-left: 25px; margin-bottom: 7px;'><label for='chknumbers'>Show numbers on seats</label></div>
 
             <p></p>
             <input type='checkbox' id='chkrestart' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkrestart' id='lblrestart'>Restart numbers on each row</label></div>
