--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
           <h2>Chart Options</h2>
           <div id='chart-options'>
             <p>Straight rows: <input type='button' id='btnstraightdown'value='–'> <input type='button' id='btnstraightup' value='+'> <span id='straight'>0</span></p>
+            <p></p>
             <div id='chknumberslabel'>
-              <p></p>
               <label class="switch">
                 <input type='checkbox' id='chknumbers' checked='checked' style='float: left'>
                 <div class="slider round"></div>
               </label>
-              <div  style='margin-left: 25px; margin-bottom: 7px;'><label for='chknumbers'>Show numbers on seats</label></div>
+              <label for='chknumbers'>Show numbers on seats</label>
             </div>
             <p></p>
             <input type='checkbox' id='chkrestart' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkrestart' id='lblrestart'>Restart numbers on each row</label></div>
