--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <input type='checkbox' id='chknumbers' checked='checked' style='float: left'>
                 <div class="slider round"></div>
               </label>
-              <label for='chknumbers'>Show numbers on seats</label>
+              <label for='chknumbers' style=" width: 82; position: absolute;">Show numbers on seats</label>
             </div>
             <p></p>
             <input type='checkbox' id='chkrestart' style='float: left'><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkrestart' id='lblrestart'>Restart numbers on each row</label></div>
