--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </script>
      </div>
      
-     <div style="float:right" class='align-right-container'>
+     <div style="float:right" class='align-right-container noprint'>
        <div id='print-button'>
          <a href='javascript:window.print()' id='print-icon'><img src="print-icon.png" alt="prt icon" style="width: 24px;top: 8px;height: 24px;position: relative;"></a>
          <a href='javascript:window.print()' id='print-text'>print</a>
@@ -93,7 +93,7 @@
      </div>
   </div>
   
-  <div class='main-container'>
+  <div class='main-container noprint'>
     <div id='input-container' class='noprint'>
       <div id='input-main'>
         <p style='font-size: 12px;'>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!</p>
