--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
   </div>
   
-  <div class='main-container noprint'>
+  <div class='main-container'>
     <div id='input-container' class='noprint'>
       <div id='input-main'>
         <p style='font-size: 12px;'>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!</p>
