--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         }
       </script>
     </div>
-    <div style="float:right" class='align-right-container noprint'>
+    <div style="float:right" class='align-right-container'>
       <div id='print-button'>
         <a href='javascript:window.print()' id='print-icon'><img src="print-icon.png" alt="prt icon" style="width: 24px;top: 8px;height: 24px;position: relative;"></a>
         <a href='javascript:window.print()' id='print-text'>print</a>
@@ -156,7 +156,7 @@
       </div>
     </div>
     
-    <div id='wrapper' style='text-align: center'>
+    <div id='wrapper'>
       <h1 class='title'> </h1>
       <div class='canvas'>
         <div id="debug" style="float: right; width: 500px; text-align: left; display: none;"><pre id="debug_json"></pre></div>
