--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="jcanvas.min.js?12"></script>
+  <script type="text/javascript" src="jcanvas.min.js"></script>
   <script src='spectrum-1.8.0.min.js'></script>
-  <script type="text/javascript" src="band.js?12"></script>
+  <script type="text/javascript" src="band.js"></script>
   <link rel="stylesheet" type="text/css" href="spectrum-1.8.0.min.css">
-  <link rel="stylesheet" type="text/css" href="band.css?12">
-  <link rel="stylesheet" type="text/css" href="bandprint.css?12" media="print" id="printcss">
+  <link rel="stylesheet" type="text/css" href="band.css">
+  <link rel="stylesheet" type="text/css" href="bandprint.css" media="print" id="printcss">
   <link rel="shortcut icon" href="seating_icon_2_0.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="favicon.png">
 
