--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="bandprint.css" media="print" id="printcss">
   <link rel="shortcut icon" href="seating_icon_2_0.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="favicon.png">
-
+  <title>Band/Orchestra Seating Chart</title>
   <meta name="description" content="A free browser-based tool for generating and printing semicircular seating charts.">
 </head>
   
